package Elevator.state;

/**
 * Enum representing the possible elevator states — used by the factory.
 */
public enum StateType {
    IDLE,
    MOVING_UP,
    MOVING_DOWN,
    DOOR_OPEN
}
